--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,47 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+/* router style */
+
+.app {
+  display: flex;
+  flex-direction: column;
+}
+
+.horizontal-nav {
+  width: 100%;
+    background-color: transparent;
+    padding: 20px;
+  
+    top: 0;
+}
+
+.horizontal-nav ul {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.horizontal-navul li {
+  margin: 10px 0;
+  
+}
+
+.horizontal-nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+}
+
+.horizontal-nav ul li a:hover {
+  color: #007bff;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+} 
